--- a/css/style.css
+++ b/css/style.css
@@ -349,11 +349,11 @@ textarea{
 }
 .minus_button{
     margin-right: 8px;
-    background: url('/img/down.png') no-repeat;
+    background: url('/ejin-nest/img/down.png') no-repeat;
     background-size: contain;
 }
 .plus_button{
-    background: url('/img/up.png') no-repeat;
+    background: url('/ejin-nest/img/up.png') no-repeat;
     background-size: contain;
 }
 .count_guide{
@@ -548,7 +548,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     bottom:15px;
     left:50%;
     transform: translateX(-50%);
-    background: url(/img/scroll_down.png) no-repeat;
+    background: url(/ejin-nest/img/scroll_down.png) no-repeat;
     background-size:contain;
 }
 .scroll_top{
@@ -558,7 +558,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     position:fixed;
     bottom:20px;
     right:2.5%;
-    background:url(/img/scroll_top.png) no-repeat;
+    background:url(/ejin-nest/img/scroll_top.png) no-repeat;
     background-size:contain;
 }
 
@@ -598,7 +598,7 @@ body .daterangepicker .drp-buttons .btn-primary{
 .promo_over_img{
     width: 100%;
     height: 240px;
-    background: url(/img/promo00.jpeg) no-repeat;
+    background: url(/ejin-nest/img/promo00.jpeg) no-repeat;
     background-size: cover;
     background-position: center right 30%;
 }
@@ -616,19 +616,19 @@ body .daterangepicker .drp-buttons .btn-primary{
     background:wheat;
 }
 .promo_base_img01{
-    background: url(/img/promo01.jpeg) no-repeat;
+    background: url(/ejin-nest/img/promo01.jpeg) no-repeat;
     background-size: cover;
 }
 .promo_base_img02{
-    background: url(/img/promo02.jpeg) no-repeat;
+    background: url(/ejin-nest/img/promo02.jpeg) no-repeat;
     background-size: cover;
 }
 .promo_base_img03{
-    background: url(/img/promo03.jpeg) no-repeat;
+    background: url(/ejin-nest/img/promo03.jpeg) no-repeat;
     background-size: cover;
 }
 .promo_base_img04{
-    background: url(/img/promo04.jpeg) no-repeat;
+    background: url(/ejin-nest/img/promo04.jpeg) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -882,7 +882,7 @@ body .daterangepicker .drp-buttons .btn-primary{
 .pride_wrap{
     width: 100%;
     margin: 200px auto;
-    background: url(/img/pride00.jpeg) no-repeat fixed;
+    background: url(/ejin-nest/img/pride00.jpeg) no-repeat fixed;
     background-size: cover;
     box-shadow: inset -800px 0px 60px 55px rgb(0, 0, 0, 0.6);
 }
@@ -949,19 +949,19 @@ body .daterangepicker .drp-buttons .btn-primary{
     opacity: 1;
 }
 .dining_pic_platz{
-    background: url(/img/dining00.jpeg) no-repeat;
+    background: url(/ejin-nest/img/dining00.jpeg) no-repeat;
     background-size: cover;
 }
 .dining_pic_kunst{
-    background: url(/img/dining01.jpeg) no-repeat center;
+    background: url(/ejin-nest/img/dining01.jpeg) no-repeat center;
     background-size: cover;
 }
 .dining_pic_luft{
-    background: url(/img/dining02.jpeg) no-repeat left center;
+    background: url(/ejin-nest/img/dining02.jpeg) no-repeat left center;
     background-size: cover;
 }
 .dining_pic_room{
-    background: url(/img/dining03.jpeg) no-repeat center bottom;
+    background: url(/ejin-nest/img/dining03.jpeg) no-repeat center bottom;
     background-size: cover;
 }
 
