--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ textarea{
     top:0;
     left:0;
     height:100vh;
-    background:url('/img/main_pic.jpeg') no-repeat;
+    background:url('/ejin-nest/img/main_pic.jpeg') no-repeat;
     background-size:cover;
     background-position:left 0 bottom 20%;
 }
