--- a/css/style.css
+++ b/css/style.css
@@ -1088,6 +1088,14 @@ body .daterangepicker .drp-buttons .btn-primary{
 .location_map iframe{
     width: 100%;
     height: 100%;
+    border: 0 none;
+}
+#locations-panel{
+    display: none;
+}
+#gmp-map{
+    width: 100%;
+    left: 0;
 }
 
 /* footer */
