--- a/css/style.css
+++ b/css/style.css
@@ -1091,18 +1091,30 @@ body .daterangepicker .drp-buttons .btn-primary{
     border: 0 none;
 }
 .map-marker{
-    padding: 5px;
+    padding: 15px 10px;
+}
+.map-name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #483f35;
 }
 .marker-address{
+    margin-top: 5px;
+    word-break: break-all;
     font-size: 14px;
     font-weight: 300;
     line-height: 1.6;
     color: #acacac;
 }
-.marker-btn{
+.map-marker .marker-btn{
+    display: inline-block;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     color: royalblue;
+    margin: 5px 10px 0 0;
+}
+.location_map > div > div > div:nth-child(6) > div:nth-child(2){
+    border-radius: 10px;    
 }
 
 /* footer */
