--- a/css/style.css
+++ b/css/style.css
@@ -796,7 +796,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     left:0;
 }
 .swiper-slide > img{
-    height: 100%;
+    height: 150%;
 }
 .acmd_pic_title{
     position: absolute;
@@ -1104,6 +1104,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     font-size: 14px;
     font-weight: 300;
     line-height: 1.6;
+    text-indent: -2.8px;
     color: #acacac;
 }
 .map-marker .marker-btn{
