--- a/sub-page/login-style.css
+++ b/sub-page/login-style.css
@@ -25,7 +25,7 @@ textarea{
 .login-wrap{
     width:100vw;
     height:100vh;
-    background:url('/img/main_pic.jpeg') no-repeat;
+    background:url('/ejin-nest/img/main_pic.jpeg') no-repeat;
     background-size:cover;
     background-position:left 0 bottom 20%;
 }
@@ -110,7 +110,7 @@ textarea{
     display:none;
 }
 .keep-login input[type="checkbox"]:checked + .check-txt::before{
-    background:url(/img/check.png) no-repeat;
+    background:url(/ejin-nest/img/check.png) no-repeat;
     background-size:contain;      
 }
 .check-txt::before{
@@ -121,7 +121,7 @@ textarea{
     top:1px;
     left:0;
     margin-right:5px;
-    background:url(/img/uncheck.png) no-repeat;
+    background:url(/ejin-nest/img/uncheck.png) no-repeat;
     background-size:contain;
     transition:all .3s;
 }
