--- a/css/style.css
+++ b/css/style.css
@@ -936,17 +936,33 @@ body .daterangepicker .drp-buttons .btn-primary{
     top: 0;
     left: 0;
     margin-right: 3%;
+    background: #7e7366;
+}
+.dining_pic_list::after{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #7e7366;
+    transition: top .5s;
+}
+.dining_pic_list_on::after{
+    top: -100%;
 }
 .dining_pic_list_item{
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
+    /* top: 100%; */
     left: 0;
     opacity: 0;
+    /* transition: top .5s; */
 }
 .dining_pic_item_on{
     opacity: 1;
+    /* top: 0%; */
+    transition: top .5s .5s;
 }
 .dining_pic_platz{
     background: url(/ejin-nest/img/dining00.jpeg) no-repeat;
@@ -981,7 +997,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     top: 10px;
     left: 12%;
     opacity: 0;
-    transition: top .4s, opacity .3s .3s;
+    transition: top .3s;
     background: #7e7366;
 }
 .dining_info_list .dining_info_on{
