--- a/css/style.css
+++ b/css/style.css
@@ -946,7 +946,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     width: 100%;
     height: 100%;
     background: #7e7366;
-    transition: top .5s;
+    transition: top .4s;
 }
 .dining_pic_list_on::after{
     top: 0%;
@@ -957,10 +957,10 @@ body .daterangepicker .drp-buttons .btn-primary{
     position: absolute;
     left: 0;
     opacity: 0;
+    transition: opacity .5s .5s;
 }
 .dining_pic_item_on{
     opacity: 1;
-    transition: top .5s .5s;
 }
 .dining_pic_platz{
     background: url(/ejin-nest/img/dining00.jpeg) no-repeat;
