--- a/css/style.css
+++ b/css/style.css
@@ -946,7 +946,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     width: 100%;
     height: 100%;
     background: #7e7366;
-    transition: top .4s;
+    transition: top .5s;
 }
 .dining_pic_list_on::after{
     top: 0%;
@@ -957,7 +957,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     position: absolute;
     left: 0;
     opacity: 0;
-    transition: opacity .3s .4s;
+    transition: opacity .1s .5s;
 }
 .dining_pic_item_on{
     opacity: 1;
@@ -995,12 +995,12 @@ body .daterangepicker .drp-buttons .btn-primary{
     top: 10px;
     left: 12%;
     opacity: 0;
-    transition: top .3s;
     background: #7e7366;
 }
 .dining_info_list .dining_info_on{
     top:0;
     opacity: 1;
+    transition:top .4s .5s;
 }
 .dining_name{
     position: relative;
