--- a/css/style.css
+++ b/css/style.css
@@ -1100,6 +1100,14 @@ body .daterangepicker .drp-buttons .btn-primary{
     height: 400px;
     margin-top: 30px;
 }
+/* .location_map iframe{
+    width: 100%;
+    height: 100%;
+    border: 0 none;
+}
+.map-marker{
+    padding: 15px 10px;
+}
 .map-name{
     font-size: 18px;
     font-weight: 500;
@@ -1123,7 +1131,7 @@ body .daterangepicker .drp-buttons .btn-primary{
 }
 .location_map > div > div > div:nth-child(6) > div:nth-child(2){
     border-radius: 10px;    
-}
+} */
 
 /* footer */
 footer{
