--- a/css/style.css
+++ b/css/style.css
@@ -1100,12 +1100,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     height: 400px;
     margin-top: 30px;
 }
-/* .location_map iframe{
-    width: 100%;
-    height: 100%;
-    border: 0 none;
-}
-.map-marker{
+/*.map-marker{
     padding: 15px 10px;
 }
 .map-name{
@@ -1132,6 +1127,9 @@ body .daterangepicker .drp-buttons .btn-primary{
 .location_map > div > div > div:nth-child(6) > div:nth-child(2){
     border-radius: 10px;    
 } */
+.map-marker .marker-btn{
+    display: inline-block;
+}
 
 /* footer */
 footer{
