--- a/css/style.css
+++ b/css/style.css
@@ -1100,7 +1100,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     height: 400px;
     margin-top: 30px;
 }
-/*.map-marker{
+.map-marker{
     padding: 15px 10px;
 }
 .map-name{
@@ -1108,7 +1108,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     font-weight: 500;
     color: #483f35;
 }
-.marker-address{
+/* .marker-address{
     margin-top: 5px;
     word-break: break-all;
     font-size: 14px;
@@ -1116,7 +1116,7 @@ body .daterangepicker .drp-buttons .btn-primary{
     line-height: 1.6;
     letter-spacing: -0.6px;
     color: #acacac;
-}
+} */
 .map-marker .marker-btn{
     display: inline-block;
     font-size: 14px;
@@ -1126,9 +1126,6 @@ body .daterangepicker .drp-buttons .btn-primary{
 }
 .location_map > div > div > div:nth-child(6) > div:nth-child(2){
     border-radius: 10px;    
-} */
-.map-marker .marker-btn{
-    display: inline-block;
 }
 
 /* footer */
