--- a/css/style.css
+++ b/css/style.css
@@ -796,6 +796,8 @@ body .daterangepicker .drp-buttons .btn-primary{
     left:0;
 }
 .swiper-slide > img{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 .acmd_pic_title{
